# cryptofolio

./: .gitignore  CHANGELOG.md  CLI_GUIDELINES_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PHASE2_TESTING_GUIDE.md  PHASE2_TEST_RESULTS.md  PHASE2_VALIDATION_RESULTS.md  README.md  SECURITY.md  TOUCHID_IMPLEMENTATION_PLAN.md  VALIDATION_STRUCTURE.md
.sqlx/: query-3c98708bec14f260bc5c7b657dfdf4878a497d33d78ea0b7fa0d3249248c86e6.json  query-42b38ea9d1cdfc5a272731035bc347a3ab75761d9c6e79a22c394cfccf7ee316.json  query-58673b224a4b4c96be693374d30d4bf6de445abace46f9a66556c5a873c3c242.json  query-5975b5b1188deb864953f59a10e3b6f93c373b501332afddc8a3b1cc01765487.json  query-6f89a65c8496f46cc1bbc6ab4f25f9fb5591b31857fcbcd30d0e0ee5283ca0d6.json  query-81d8ce930223edecc131cdf5054efcc96c874e1004090229c27b6e5fdad517a1.json  query-c02334a35f6f98bc3783cb9c5a74c6347b32f3c9d6fda32210e3d792751d4e52.json  query-d061fe200ab2841d1d01c34ee6a436f02d3c84c9032fe5e593eb1b7bf83bd9c3.json  query-d4b04df573efaf1d9de16d9b49cec9b695394843893faee415edac050e6ef13b.json  query-e4593f4623dffc7efbf59801bb2e449dacb33ae70d56662a41b00f96412e0276.json
docs/: AGENTIC_DEVELOPMENT.md  ARCHITECTURE.md  CONVERSATIONAL_CLI.md  MCP_API_REFERENCE.md  MCP_README.md  MCP_TECHNICAL_ANALYSIS.md  MCP_USER_GUIDE.md  MULTI_CURRENCY_IMPLEMENTATION.md  README_ANALYSIS.md  ROADMAP.md  SECURE_SECRETS.md  VALIDATION_GUIDE.md  WARNING_ANALYSIS.md
src/: error.rs  lib.rs  main.rs
tests/: common.rs  currency_integration.rs  ollama_integration.rs
validation/: 00-installation.md  01-database-setup.md  README.md  (+6 more)
(+56 files in other folders)
