[package]
name = "cryptofolio"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing crypto portfolios across exchanges and wallets"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI framework
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Financial precision
rust_decimal = { version = "1", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Config paths
dirs = "5"

# Terminal output
colored = "2"
indicatif = "0.17"

# TTY detection
is-terminal = "0.4"

# String similarity (for "did you mean?")
strsim = "0.11"

# Environment variables
dotenvy = "0.15"

# Error handling
thiserror = "2"

# CSV parsing
csv = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Binance authentication (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Interactive shell
rustyline = { version = "14", features = ["derive"] }
shell-words = "1"

[dev-dependencies]
tokio-test = "0.4"
